[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ui/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/SelectSaveMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/OptionsMenu.tscn" type="PackedScene" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.261745, 0.959732, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.611111, 1, 1, 1, 0 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralTween" type="Tween" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 300 )
amount = 128
lifetime = 6.0
preprocess = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 1.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.7
color_ramp = SubResource( 1 )

[node name="LeftPanel" type="Control" parent="."]
anchor_right = 0.25
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBack" type="ColorRect" parent="LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.415686, 0.415686, 0.498039 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="LeftPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="LeftPanel/MainContainer"]
margin_right = 204.0
margin_bottom = 20.0
text = "Play"

[node name="OptionsButton" type="Button" parent="LeftPanel/MainContainer"]
margin_top = 24.0
margin_right = 204.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="LeftPanel/MainContainer"]
margin_top = 48.0
margin_right = 204.0
margin_bottom = 68.0
text = "Quit"

[node name="TitleImage" type="TextureRect" parent="."]
anchor_left = 0.35
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniCredits" type="Control" parent="."]
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MiniCredits"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -77.8
margin_top = -65.0
margin_right = 0.200012
grow_horizontal = 0
grow_vertical = 0
text = "Game by

ColdCalzone
Isaac Astell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popups" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelBack" type="ColorRect" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_lock_": true
}

[node name="CloseButton" type="Button" parent="Popups"]
margin_right = 12.0
margin_bottom = 20.0
text = "Close"

[node name="SaveContainer" type="Control" parent="Popups"]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSaveMenu" parent="Popups/SaveContainer" instance=ExtResource( 4 )]

[node name="OptionsContainer" type="Control" parent="Popups"]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 40.0

[node name="OptionsMenu" parent="Popups/OptionsContainer" instance=ExtResource( 5 )]

[connection signal="pressed" from="LeftPanel/MainContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="LeftPanel/MainContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="LeftPanel/MainContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Popups/CloseButton" to="." method="_on_CloseButton_pressed"]
